# project_barbershop

./: .env  db.sqlite3  pyproject.toml
config/: context_processors.py  settings.py  urls.py
core/: views.py
mainapp/: urls.py  views.py
static/: main.css
templates/: base.html  landing.html  order_detail.html  orders_list.html  thanks.html
templates/includes/: menu.html  order_card.html
templates/registration/: login.html
