[project]
name = "project-barbershop"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksei Brevnov",email = "brevnov.aleksei@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django (<5.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
